@@ -6,12 +6,12 @@
 
     <groupId>com.epam.jdi</groupId>
     <artifactId>jdi-light-applitools-tests</artifactId>
-    <version>1.4.10-SNAPSHOT</version>
+    <version>1.4.12-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Tests: JDI Light Applitools Eyes</name>
 
     <properties>
-        <jdi.version>1.4.10-SNAPSHOT</jdi.version>
+        <jdi.version>1.4.12-SNAPSHOT</jdi.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <applitools.version>3.157.10</applitools.version>
@@ -24,6 +24,18 @@
         <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
         <aspectj.args></aspectj.args>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
