@@ -6,11 +6,11 @@
 
     <groupId>com.epam.jdi</groupId>
     <artifactId>jdi-light-html-tests</artifactId>
-    <version>1.4.10-SNAPSHOT</version>
+    <version>1.4.12-SNAPSHOT</version>
     <name>Tests: JDI Html</name>
 
     <properties>
-        <jdi.version>1.4.10-SNAPSHOT</jdi.version>
+        <jdi.version>1.4.12-SNAPSHOT</jdi.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <driver>chrome</driver>
         <validate.performance>false</validate.performance>
@@ -156,6 +156,15 @@
             <id>functional</id>
             <properties>
                 <suite-xml-file>src/test/resources/functional.xml</suite-xml-file>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
             </properties>
         </profile>
     </profiles>
